--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,8 +4,8 @@ RUN apt-get update -y && \
     apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
-COPY ./config/mariadb-conf.sh /
+COPY ./conf/mariadb-conf.sh ./
 
-RUN chmod +x /db-conf.sh
+RUN chmod +x /mariadb-conf.sh
 
 ENTRYPOINT [ "./mariadb-conf.sh" ]
