--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -2,12 +2,12 @@ events {
 
 }
 
-https {
+http {
     include /etc/nginx/mime.types;
 
     server {
         listen  443 ssl;
-        server_name arabelo-.42.fr;
+        server_name rteles-f.42.fr;
 
         ssl_certificate     /etc/nginx/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/keys/nginx-selfsigned.key;
