--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -14,7 +14,7 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 		# -subj "/C=PT/ST=Lisboa/L=Lisboa/O=42/OU=42/CN=rteles-f.42.fr"
 # Add env variables
 
-COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./config/nginx.conf /etc/nginx/nginx.conf
 
 CMD [ "-g", "daemon off;" ]
 
