--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -10,8 +10,8 @@ RUN mkdir -p /etc/nginx/ssl/certs /etc/nginx/ssl/keys /var/www/wordpress && \
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 		-keyout /etc/nginx/ssl/keys/nginx-selfsigned.key \
 		-out /etc/nginx/ssl/certs/nginx-selfsigned.crt \
-		-subj "/C=${COUNTRY}/ST=${STATE}/L=${CITY}/O=${ORG}/OU=${UNIT}/CN=${DOMAIN}"
-		# -subj "/C=PT/ST=Lisboa/L=Lisboa/O=42/OU=42/CN=rteles-f.42.fr"
+		-subj "/C=PT/ST=Lisboa/L=Lisboa/O=42/OU=42/CN=rteles-f.42.fr"
+		# -subj "/C=${COUNTRY}/ST=${STATE}/L=${CITY}/O=${ORG}/OU=${UNIT}/CN=${DOMAIN}"
 # Add env variables
 
 COPY ./config/nginx.conf /etc/nginx/nginx.conf
