--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -47,6 +47,8 @@ services:
     restart: always 
     volumes:
       - wordpress:/var/www/wordpress
+    env_file:
+      .env
     depends_on:
       - wordpress
     networks:
