--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,4 +17,4 @@ COPY ./config/wordpress-conf.sh ./
 RUN chmod +x /wordpress-conf.sh && \
 	sh -c /wordpress-conf.sh
 
-CMD ["/usr/sbin/php-fpm7.4 -F"]
+CMD ["/usr/sbin/php-fpm7.4-fpm -F"]
