--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -1,11 +1,12 @@
-events {}
+events {
+
+}
 
 http {
     include /etc/nginx/mime.types;
 
     server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
+        listen  443 ssl;
         server_name rteles-f.42.fr;
 
         ssl_certificate     /etc/nginx/ssl/certs/nginx-selfsigned.crt;
@@ -13,20 +14,12 @@ http {
         ssl_protocols       TLSv1.3;
 
         root /var/www/wordpress;
-        index index.php index.html index.htm;;
+
+		index index.php;
 
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
         }
-    }
-
-    server {
-        listen 80;
-        server_name rteles-f.42.fr;
-        return 301 https://$host$request_uri;
     }
 }
