--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:bullseye
 RUN apt-get update -y && \
     apt-get install mariadb-server -y
 
-COPY ./config/mariadb-conf.sh ./
+COPY ./config/mariadb-conf.sh /
 
 RUN chmod +x /mariadb-conf.sh && \
     touch sh_executed && \
