--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,4 +7,4 @@ COPY ./config/mariadb-conf.sh /
 
 RUN chmod +x /mariadb-conf.sh
 
-CMD ["/bin/bash -c", "./mariadb-conf.sh", "mysqld_safe", "--bind-address=0.0.0.0", "--port=3306", "--socket=/run/mysqld/mysqld.sock"]
+ENTRYPOINT [ "/mariadb-conf.sh" ]
