--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,7 @@
 DATABASE_NAME = mydatabase
 DATABASE_USER = myuser
 DATABASE_PASSWORD = mypassword
+DATABASE_ROOT_PASSWORD = rootpassword
 DATABASE_HOST = mariadb
 DATABASE_PORT = 3306
 
