--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
       - mariadb:/var/lib/mysql
     env_file:
       - .env
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 5s
-      retries: 5
-      timeout: 10s
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+    #   interval: 5s
+    #   retries: 5
+    #   timeout: 10s
     networks:
       - inception_net
 
@@ -32,8 +32,8 @@ services:
     env_file:
       .env
     depends_on: 
-      mariadb:
-        condition: service_healthy
+      - mariadb
+        # condition: service_healthy
     networks:
       - inception_net
 
